--- a/vue-habit-tracker/package.json
+++ b/vue-habit-tracker/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emoji-mart": "^5.6.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.2"
   },
