--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "emoji-mart": "^5.6.0",
+    "@emoji-mart/data": "^1.0.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.2"
   },
