--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "emoji-mart": "^5.6.0",
     "@emoji-mart/data": "^1.0.0",
+    "emoji-mart": "^5.6.0",
+    "font-awesome": "^4.7.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.2"
   },
